@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AgentDashboard.pm - a global dashbard
-# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentDashboard.pm,v 1.28 2012/01/06 12:34:19 mg Exp $
+# $Id: AgentDashboard.pm,v 1.24.2.1 2011/12/02 15:26:55 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -17,7 +17,7 @@ use warnings;
 use Kernel::System::Cache;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.28 $) [1];
+$VERSION = qw($Revision: 1.24.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -51,10 +51,6 @@ sub Run {
 
     # update/close item
     if ( $Self->{Subaction} eq 'UpdateRemove' ) {
-
-        # challenge token check for write action
-        $Self->{LayoutObject}->ChallengeTokenCheck();
-
         my $Name = $Self->{ParamObject}->GetParam( Param => 'Name' );
         my $Key = 'UserDashboard' . $Name;
 
@@ -83,9 +79,6 @@ sub Run {
 
     # update preferences
     elsif ( $Self->{Subaction} eq 'UpdatePreferences' ) {
-
-        # challenge token check for write action
-        $Self->{LayoutObject}->ChallengeTokenCheck();
 
         my $Name = $Self->{ParamObject}->GetParam( Param => 'Name' );
 
@@ -145,9 +138,6 @@ sub Run {
     # update settings
     elsif ( $Self->{Subaction} eq 'UpdateSettings' ) {
 
-        # challenge token check for write action
-        $Self->{LayoutObject}->ChallengeTokenCheck();
-
         my @Backends = $Self->{ParamObject}->GetArray( Param => 'Backend' );
         for my $Name ( sort keys %{$Config} ) {
             my $Active = 0;
@@ -183,9 +173,6 @@ sub Run {
 
     # update position
     elsif ( $Self->{Subaction} eq 'UpdatePosition' ) {
-
-        # challenge token check for write action
-        $Self->{LayoutObject}->ChallengeTokenCheck();
 
         my @Backends = $Self->{ParamObject}->GetArray( Param => 'Backend' );
 
@@ -365,10 +352,9 @@ sub Run {
                 );
                 if ( $Param->{Block} eq 'Option' ) {
                     $Param->{Option} = $Self->{LayoutObject}->BuildSelection(
-                        Data        => $Param->{Data},
-                        Name        => $Param->{Name},
-                        SelectedID  => $Param->{SelectedID},
-                        Translation => $Param->{Translation},
+                        Data       => $Param->{Data},
+                        Name       => $Param->{Name},
+                        SelectedID => $Param->{SelectedID},
                     );
                 }
                 $Self->{LayoutObject}->Block(
@@ -397,11 +383,7 @@ sub Run {
     }
 
     # get output back
-    my $Refresh = '';
-    if ( $Self->{UserRefreshTime} ) {
-        $Refresh = 60 * $Self->{UserRefreshTime};
-    }
-    my $Output = $Self->{LayoutObject}->Header( Refresh => $Refresh, );
+    my $Output = $Self->{LayoutObject}->Header( Refresh => 30 * 60 );
     $Output .= $Self->{LayoutObject}->NavigationBar();
     $Output .= $Self->{LayoutObject}->Output(
         TemplateFile => 'AgentDashboard',
