@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1758.2.198 2011/12/01 09:35:31 mb Exp $
+# $Id: CHANGES,v 1.1758.2.199 2011/12/02 15:26:54 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.0.12 ????-??-??
+ - 2011-12-02 Fixed bug#7442 - Dashboard permission check for multiple Groups only
+    tests first group.
  - 2011-11-29 Fixed bug#7719 - Agent login page does not offer user to save password
     with Firefox browser.
  - 2011-11-30 Fixed bug#6715 - Setting CustomerID with otrs.AddCustomerUser.pl.
